bppackaging/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Home_Number_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Number SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Number SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <label>Preferred Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Level</label>
        <referenceTo>Price_Level__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Worker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SA_same_as_BA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA same as BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <label>VIP#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Work_Number_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Number SMS</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>